MODON MRE BPDEV/force-app/main/default/objects/Agency_Mapping__c/Agency_Mapping__c.object-meta.xml
<CustomObject>
    <label>Agency Mapping</label>
    <nameField>
        <displayFormat>AGMN-{0000}</displayFormat>
        <label>Agency Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>