MODON MRE BPDEV/force-app/main/default/objects/Agency_Mapping__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agency Mappings</relationshipLabel>
    <relationshipName>Agency_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>