MODON MRE BPDEV/force-app/main/default/objects/Agency_Mapping__c/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Communication</label>
    <referenceTo>Communication__c</referenceTo>
    <relationshipLabel>Agency Mappings</relationshipLabel>
    <relationshipName>Agency_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>