MODON MRE BPDEV/force-app/main/default/objects/Agency_Mapping__c/fields/Event_and_Activity__c.field-meta.xml
<CustomField>
    <fullName>Event_and_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event and Activity</label>
    <referenceTo>Event_and_Activity__c</referenceTo>
    <relationshipLabel>Agency Mappings</relationshipLabel>
    <relationshipName>Agency_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>