MODON MRE BPDEV/force-app/main/default/objects/Agency_Mapping__c/validationRules/Cannot_Change_From_Assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_From_Assigned</fullName>
    <active>true</active>
    <description>cannot change a published  Event</description>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c),
    TEXT(PRIORVALUE(Status__c)) = &quot;Assigned&quot;,
    TEXT(Status__c) != &quot;Assigned&quot;,
    TEXT(Event_and_Activity__r.Status__c) = &quot;Published&quot;
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Cannot change agency status from &apos;Assigned&apos; because the related Event/Activity is Published.</errorMessage>
</ValidationRule>